<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brokenWhite"
    tools:context=".ui.detail.DetailActivity">

    <ImageView
        android:id="@+id/img_plant"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="220dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/tomato2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/rl_konten"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:fontFamily="@font/poppins_semibold"
            android:gravity="center"
            android:text="@string/tomato"
            android:textColor="@color/green_100"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tv_panen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="38dp"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center_horizontal|top"
            android:text="@string/panen"
            android:textColor="@color/green_100"
            android:textSize="16sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_req"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="74dp"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center_horizontal|top"
        android:text="@string/req"
        android:textColor="@color/grey_300"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rl_konten"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_reqText"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="3dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/reqText"
        android:textColor="@color/grey_200"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_req"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_how"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="207dp"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center_horizontal|top"
        android:text="@string/how"
        android:textColor="@color/grey_300"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_req"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_howText"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/howText"
        android:textColor="@color/grey_200"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_how"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>