<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:id="@+id/img_login"
        android:layout_width="414dp"
        android:layout_height="257dp"
        android:background="@color/brokenWhite"
        android:src="@drawable/img_login"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="39dp"
        android:layout_height="21dp"
        android:layout_marginTop="288dp"
        android:alpha="0"
        android:fontFamily="@font/poppins_medium"
        android:gravity="top"
        android:text="@string/email"
        android:textColor="@color/orens"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.123"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/img_login"
        tools:alpha="100" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailEditTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:alpha="0"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_email"
        app:startIconDrawable="@drawable/ic_email"
        tools:alpha="100">

        <com.capstone.cuacatani.custom.EditEmail
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ex_email"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_marginTop="385dp"
        android:alpha="0"
        android:fontFamily="@font/poppins_medium"
        android:gravity="top"
        android:text="@string/password"
        android:textColor="@color/orens"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.134"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/img_login"
        tools:alpha="100" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passEditTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:alpha="0"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="15dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="15dp"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_password"
        app:startIconDrawable="@drawable/ic_lock"
        tools:alpha="100">

        <com.capstone.cuacatani.custom.EditPassword
            android:id="@+id/passEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ex_pass"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:alpha="0"
        android:backgroundTint="@color/green_100"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:text="@string/login"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passEditTextLayout"
        tools:alpha="100" />

    <LinearLayout
        android:id="@+id/ll_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:alpha="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_google"
        tools:alpha="100">

        <TextView
            android:id="@+id/tv_acc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/poppins_regular"
            android:lineSpacingExtra="7sp"
            android:text="@string/acc"
            android:textColor="@color/grey" />

        <TextView
            android:id="@+id/tv_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:lineSpacingExtra="7sp"
            android:text="@string/create"
            android:textColor="@color/green_100" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login">

        <View
            android:id="@+id/vv_1"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/grey"
            app:layout_constraintEnd_toStartOf="@+id/vv_2"
            app:layout_constraintStart_toEndOf="@+id/tv_or"
            app:layout_constraintTop_toTopOf="@+id/tv_or" />

        <TextView
            android:id="@+id/tv_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/or"
            android:textColor="@color/green_100" />

        <View
            android:id="@+id/vv_2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/grey"
            app:layout_constraintEnd_toEndOf="@+id/tv_or"
            app:layout_constraintStart_toEndOf="@+id/vv_1"
            app:layout_constraintTop_toTopOf="@+id/tv_or" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_google"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/btn_google_background"
        android:gravity="center"
        android:stateListAnimator="@animator/btn_anim"
        android:text="@string/google"
        android:textColor="@color/grey"
        android:textSize="17sp"
        app:backgroundTint="@null"
        app:icon="@drawable/ic_google"
        app:iconGravity="textStart"
        app:iconTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_or" />


</androidx.constraintlayout.widget.ConstraintLayout>

