<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="311dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="20dp"
    app:cardElevation="10dp"
    android:layout_marginVertical="9dp"
    android:layout_marginHorizontal="50dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:background="@drawable/box_list_plants">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_photo"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:paddingStart="5dp"
            android:layout_centerVertical="true"
            android:contentDescription="@string/photo"
            tools:src="@tools:sample/avatars"
            android:background="@color/brokenWhite"
            app:shapeAppearanceOverlay="@style/RoundCorner"/>

        <TextView
            android:id="@+id/tv_namePlant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/namePlant"
            android:layout_toEndOf="@+id/iv_photo"
            android:layout_marginStart="12dp"
            android:layout_marginTop="20dp"
            android:textSize="15sp"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="@color/brokenWhite"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_panen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/panen"
            android:layout_toEndOf="@+id/iv_photo"
            android:layout_marginStart="12dp"
            android:layout_marginTop="41dp"
            android:textSize="11sp"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/brokenWhite"
            android:textStyle="bold" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>