<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    app:cardElevation="20dp"
    android:outlineSpotShadowColor="@color/green_300"
    android:outlineAmbientShadowColor="@color/green_300"
    app:cardBackgroundColor="@color/green_300"
    android:layout_marginVertical="9dp"
    android:layout_marginHorizontal="30dp">

    <RelativeLayout
        android:id="@+id/rl_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        tools:ignore="MissingConstraints">

        <ImageView
            android:id="@+id/iv_photo"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_centerVertical="true"
            android:contentDescription="@string/photo"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_namePlant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/namePlant"
            android:layout_toEndOf="@+id/iv_photo"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:textSize="17sp"
            android:fontFamily="@font/poppins_semibold"
            android:textColor="@color/green_300"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_panen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/panen"
            android:layout_toEndOf="@+id/iv_photo"
            android:layout_marginStart="20dp"
            android:layout_marginTop="45dp"
            android:textSize="13sp"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/green_300"
            android:textStyle="bold" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>